Created entities and DB configuration

--- a/MyFinances/appsettings.json
+++ b/MyFinances/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "Default": "server=localhost\\sqlexpress;database=PersonalFinances;user id=StrongFit;password=5tr0n6FiT.57"
+  },
   "AllowedHosts": "*"
 }
